<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChangeKeyActivity" android:id="@+id/constraintLayout">
    <TextView
            android:text="@string/Playfair_Encryption_With_Indent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/App_Title"
            android:textStyle="bold" android:fontFamily="sans-serif-smallcaps"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/ChangeKey_New_Key_Input"
            android:hint="@string/ChangeKey_Input"
            android:layout_marginTop="166dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" android:layout_marginEnd="40dp"/>
    <Button
            android:text="@string/ChangeKey_Confrim_Key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ChangeKey_Confirm_Key_Button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ChangeKey_New_Key_Input"
            app:layout_constraintEnd_toEndOf="@+id/ChangeKey_New_Key_Input"/>
    <Button
            android:text="@string/ChangeKey_Back_ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ChangeKey_Back_Button"
            app:layout_constraintStart_toStartOf="@+id/ChangeKey_New_Key_Input"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ChangeKey_New_Key_Input"/>

</androidx.constraintlayout.widget.ConstraintLayout>