<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/constraintLayout" android:layout_marginTop="1dp" android:layout_marginBottom="1dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp">

        <TextView
                android:text="@string/Playfair_Encryption_With_Indent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/App_Title"
                android:textStyle="bold" android:fontFamily="sans-serif-smallcaps"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
        <Button
                android:text="@string/Change_Key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Change_Key_Button"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="272dp" app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/print_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Print_Key_Button"
                app:layout_constraintTop_toBottomOf="@+id/Change_Key_Button"
                android:layout_marginTop="37dp" app:layout_constraintStart_toStartOf="@+id/Change_Key_Button"
                app:layout_constraintEnd_toEndOf="@+id/Change_Key_Button"/>
        <Button
                android:text="@string/encrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Encrypt_Button"
                app:layout_constraintTop_toBottomOf="@+id/Print_Key_Button"
                android:layout_marginTop="37dp"
                app:layout_constraintEnd_toEndOf="@+id/Print_Key_Button"
                app:layout_constraintStart_toStartOf="@+id/Print_Key_Button"/>
        <Button
                android:text="@string/decrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Decrypt_Button"
                app:layout_constraintEnd_toEndOf="@+id/Encrypt_Button"
                app:layout_constraintTop_toBottomOf="@+id/Encrypt_Button"
                android:layout_marginTop="37dp" app:layout_constraintStart_toStartOf="@+id/Encrypt_Button"
                app:layout_constraintHorizontal_bias="0.4"/>
        <TextView
                android:text="@string/Menu_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Menu_Text_MENU"
                android:textAllCaps="true" android:textStyle="bold"
                android:textSize="37sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginEnd="16dp" android:layout_marginBottom="57dp"
                app:layout_constraintEnd_toEndOf="@+id/Change_Key_Button"
                app:layout_constraintBottom_toTopOf="@+id/Change_Key_Button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>