<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DecryptActivity">
    <TextView
            android:text="@string/Playfair_Encryption_With_Indent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/App_Title"
            android:textStyle="bold" android:fontFamily="sans-serif-smallcaps"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/Decrypt_PhraseToDecryptInput"
            app:layout_constraintTop_toBottomOf="@+id/App_Title"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" android:layout_marginEnd="40dp"
            android:hint="@string/Decrypt_InputPhrase" android:layout_marginTop="48dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/Decrypt_BackButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Decrypt_BackButton"
            app:layout_constraintStart_toStartOf="@+id/Decrypt_PhraseToDecryptInput" android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/Decrypt_PhraseToDecryptInput"/>
    <Button
            android:text="@string/Decrypt_DecryptButtonRealText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Decrypt_DecryptButton"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/Decrypt_PhraseToDecryptInput"
            app:layout_constraintEnd_toEndOf="@+id/Decrypt_PhraseToDecryptInput"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Decrypt_DecryptionOutput"
            android:textAlignment="center"
            android:fontFamily="sans-serif-smallcaps" android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="75dp"
            app:layout_constraintTop_toBottomOf="@+id/Decrypt_DecryptButton" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>

</androidx.constraintlayout.widget.ConstraintLayout>