<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EncryptActivity">
    <TextView
            android:text="@string/Playfair_Encryption_With_Indent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/App_Title"
            android:textStyle="bold" android:fontFamily="sans-serif-smallcaps"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:id="@+id/Encrypt_Real_BackButton"
            android:text="@string/Encrypt_BackButtonTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/Encrypt_PhraseToEncrypt_Input" android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/Encrypt_PhraseToEncrypt_Input"/>
    <Button
            android:text="@string/Encrypt_Encrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Encrypt_EncryptPhraseButton"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="192dp"
            app:layout_constraintEnd_toEndOf="@+id/Encrypt_PhraseToEncrypt_Input"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Encrypt_EncryptedPhraseOutput"
            android:fontFamily="sans-serif-smallcaps" android:textSize="34sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="75dp"
            app:layout_constraintTop_toBottomOf="@+id/Encrypt_EncryptPhraseButton"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/Encrypt_PhraseToEncrypt_Input"
            android:hint="@string/Encrypt_EnterPhraseToEncrypt"
            android:layout_marginTop="47dp"
            app:layout_constraintTop_toBottomOf="@+id/App_Title" android:layout_marginBottom="57dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/Encrypt_EncryptPhraseButton"
            android:layout_marginStart="40dp" android:layout_marginEnd="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>