<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity" android:id="@+id/coordinatorLayout">
    <TextView
            android:text="@string/Playfair_Encryption_With_Indent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/App_Title"
            android:textStyle="bold" android:fontFamily="sans-serif-smallcaps"
            android:textSize="30sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="29dp" app:layout_constraintBottom_toTopOf="@+id/Enter_Key_EditText_Input"/>
    <EditText
            android:id="@+id/Enter_Key_EditText_Input"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/Enter_Key_Input" android:layout_marginTop="117dp" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/Main_Confirm_Key_Button"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" android:layout_marginEnd="40dp"
    />
    <Button
            android:id="@+id/Main_Confirm_Key_Button"
            android:text="@string/confirm_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Enter_Key_EditText_Input" android:layout_marginBottom="510dp"
            app:layout_constraintEnd_toEndOf="@+id/Enter_Key_EditText_Input"/>
</androidx.constraintlayout.widget.ConstraintLayout>